[package]
name = "can-dbc"
version = "3.0.0"
license = "MIT"
description = "A parser for the DBC format. The DBC format is used to exchange CAN network data."
homepage = "https://github.com/marcelbuesing/can-dbc"
repository = "https://github.com/marcelbuesing/can-dbc.git"
authors = ["marcelbuesing <buesing.marcel@googlemail.com>"]
keywords = ["dbc", "can", "automotive", "ecu"]
edition = "2018"

[badges]
travis-ci = { repository = "marcelbuesing/can-dbc", branch = "dev" }
codecov = { repository = "marcelbuesing/can-dbc", branch = "dev", service = "github" }

[dependencies]
derive-getters = "0.1"
serde = { version = "1.0", optional = true }
serde_derive = { version = "1.0", optional = true }

[dependencies.nom]
version = "4.2"
features = ["verbose-errors"]

[dev-dependencies]
clap = "2.33"
codegen = "0.1"

[features]
with-serde = ["serde", "serde_derive"]