[package]
name = "can-dbc-codegen"
version = "0.1.0"
license = "MIT"
homepage = "https://github.com/marcelbuesing/can-dbc"
repository = "https://github.com/marcelbuesing/can-dbc.git"
authors = ["marcelbuesing <buesing.marcel@googlemail.com>"]
keywords = ["dbc", "can", "automotive", "ecu"]
edition = "2018"

[dependencies]
byteorder = "1.2"
# codegen = "0.1.0"
heck = "0.3"
clap = "2.32"
can-dbc = { path = "../can-dbc" }

[dependencies.codegen]
path = "./codegen"

[dependencies.nom]
version = "4.1"
features = ["verbose-errors"]