[package]
name = "dbcc"
# Aligned with can-dbc version
version = "1.0.1"
license = "MIT"
homepage = "https://github.com/marcelbuesing/can-dbc"
repository = "https://github.com/marcelbuesing/can-dbc.git"
authors = ["marcelbuesing <buesing.marcel@googlemail.com>"]
keywords = ["dbc", "can", "automotive", "ecu"]
edition = "2018"

[[bin]]
bench = false
path = "src/main.rs"
name = "dbcc"

[dependencies]
can-dbc = { version = "1.0.1",  path = "../can-dbc" }
heck = "0.3"
log = "0.4"
pretty_env_logger = "0.3"
structopt = "0.2"

# TODO replace this with upstream version once changes have been merged and released
[dependencies.codegen]
git = "https://github.com/marcelbuesing/codegen.git"
rev = "d6ffa62757254c847c2fe5dac1471e7175e6e220"

[dependencies.nom]
version = "4.1"
features = ["verbose-errors"]

[dev-dependencies]
byteorder = "1.3"
futures = "0.1"
tokio = "0.1"
tokio-socketcan-bcm = { version = "0.1", features = ["try_from"] }