[package]
name = "dbcc"
description = "Compiles `data base CAN` (dbc) files into Rust code."
version = "1.0.0"
license = "MIT"
homepage = "https://github.com/marcelbuesing/can-dbc"
repository = "https://github.com/marcelbuesing/can-dbc.git"
documentation = "https://docs.rs/dbcc"
readme = "README.md"
authors = ["marcelbuesing <buesing.marcel@googlemail.com>"]
keywords = ["dbc", "can", "automotive", "ecu", "socketcan"]
edition = "2018"

[[bin]]
bench = false
path = "src/main.rs"
name = "dbcc"

[badges]
travis-ci = { repository = "marcelbuesing/can-dbc", branch = "dev" }

[dependencies]
can-dbc = { version = "2.0.0",  path = "../can-dbc" }
codegen = "0.1.1"
heck = "0.3"
log = "0.4"
pretty_env_logger = "0.3"
structopt = "0.2"
socketcan = "1.7"

[dependencies.nom]
version = "4.2"
features = ["verbose-errors"]

[dev-dependencies]
byteorder = "1.3"
futures-preview = { version = "0.3.0-alpha.15", features = ["compat"] }
futures-util-preview =  { version = "0.3.0-alpha.13", features = ["compat"] }
tokio = "0.1"
tokio-socketcan-bcm = "0.2"